[package]
name = "advise"
version = "0.1.0"
authors = ["Zakhary Kaplan <me@zakhary.dev>"]
edition = "2021"
description = """
User-friendly status reporting
"""
documentation = "https://docs.rs/advise"
repository = "https://github.com/kaplanz/advise"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream = "0.6.11"
anstyle = "1.0.6"
log = "0.4.20"
